# generic_camera_asi

./: .gitignore  CHANGELOG.MD  Cargo.toml  README.MD  build.rs  crates-io.md
examples/: main.rs
gencam_asi_example/: Cargo.toml  show_fits.py
gencam_asi_example/src/: config.rs  main.rs
generic_camera_asi/: Cargo.toml  build.rs
generic_camera_asi/include/: wrapper.h
generic_camera_asi/src/: asicamera2.rs  asihandle.rs  lib.rs  zwo_ffi.rs  zwo_ffi_wrapper.rs
src/: asicamera2.rs  asicamera_2.rs  asihandle.rs  lib.rs  main.rs  zwo_ffi_wrapper.rs
