[package]
name = "generic-camera-asi"
version = "0.0.1"
edition = "2021"
rust-version = "1.68.0"
authors = ["Sunip K. Mukherjee"]
license = "MIT OR Apache-2.0"
readme = "README.MD"
repository = "https://github.com/sunipkm/generic-camera-asi"
homepage = "https://crates.io/crates/generic-camera-asi"
keywords = ["generic-camera", "interface", "api", "zwo", "asi"]
build = "build.rs"
description = """
An efficient and ergonomic interface to capture images using cameras.
"""
exclude = [".github"]

[[example]]
name = "asigeneric_capture"
path = "examples/main.rs"
test = true
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-camera = { path = "../generic_camera" }
refimage = { version = "<1.0", default-features = false}
log = "0.4"
lazy_static = "1.5"
bytemuck = "1.18"

[build-dependencies]
bindgen = "0.68"
cc = "1.0.83"

[dev-dependencies]
fitsio = { version = "0.21" }
